# test-api-rs

./: Cargo.toml  Dockerfile  README.md  build.rs  test.http
src/: handlers.rs  index.html  main.rs
