[package]
name = "test-api"
version = "0.1.0"
edition = "2021"

[profile.release]
# opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
# panic = "abort"     # Abort on panic
strip = true # Automatically strip symbols from the binary.

[dependencies]
tokio = { version = "1.32", features = ["full"] }
axum = { version = "0.6", features = ["json", "headers"] }
tower-http = { version = "*", features = ["cors"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
