[package]
name = "test-api"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.26"
axum = { version = "0.7", features = ["json", "ws"] }
tower-http = { version = "*", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"

[build-dependencies]
chrono = "0.4"
